# pico-rover

./: .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  README.md  lwipopts.h
include/: terminal.h
include/config/: options.h
include/control/: driverstation.h  udpxbox.h
include/subsystems/: battery.h  drivetrain.h  lights.h  moduleconfig.h
src/: main.cpp  terminal.cpp
src/control/: driverstation.cpp  udpxbox.cpp
src/subsystems/: battery.cpp  drivetrain.cpp  lights.cpp
